Fix for distorted images

--- a/www/css/ratchet.css
+++ b/www/css/ratchet.css
@@ -1709,7 +1709,8 @@ select {
     height: 200px;
 }
 .crop-size {
-    /*height: 100%;*/
+    height: 100%;
+    width: 100%;
     background-size: contain;
     -moz-background-size: cover;
     -webkit-background-size: cover;
